fixed offscreen?

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*less font size contrast for mobile*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
 	html {font-size: 1em;}
 
 	p {margin-bottom: 1.3em;}
@@ -89,17 +89,18 @@ h1, h2, h3, h4, h5, h6 {
 /*SPLIT IMAGE LANDING*/
 
 .split-image {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+/*	grid-template-rows: minmax(100vh, max-content);*/
+	grid-template-rows: auto;
+	
 	height: 100vh;
 }
 
 .split-image-text {
-	width: 50vw;
-	height: inherit;
-	float: left;
-	
 	background-color: var(--yellow);
 	
-	padding: 3vw;
+	padding: 20vh 3vw;
 	
 	display: flex;
 	flex-direction: column;
@@ -107,9 +108,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .split-image-image {
-	width: 50vw;
-	height: inherit;
-	float: left;
+/*	width: 50vw;*/
+/*	height: inherit;*/
+/*	float: left;*/
+	
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
 
